syntax = "proto3";

package auth;
option go_package = "./authpb";

service AuthService {
  rpc RegisterUser(RegisterRequest) returns (RegisterResponse);
  rpc LoginUser(LoginRequest) returns (LoginResponse);
}

message User {
  string name = 2;
  string surname = 3;
  string patronymic = 4;
  string email = 5;
  string password = 6;
}

message RegisterRequest {
  User user = 1;
}

message RegisterResponse {
  string id = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

